its getting real

--- a/example-dex/Cargo.toml
+++ b/example-dex/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2024"
 crate-type = ["cdylib"]
 
 [dependencies]
-near-sdk = "5.16"
+near-sdk = "5"
 uint = "0.10"
 tear-sdk = { path = "../tear-sdk" }
 
 [profile.release]
 codegen-units = 1
-opt-level = 3
+opt-level = "s"
