--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = ["example-dex", "tear-sdk"]
 name = "intear-dex"
 description = "cargo-near-new-project-description"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 repository = "https://github.com/INTEARnear/dex"
 
 [lib]
@@ -24,13 +24,14 @@ container_build_command = [
 ]
 
 [dependencies]
-near-sdk = "5.16"
+near-sdk = { version = "5.23", features = ["unstable"] }
 wasmi = { version = "1.0.4", default-features = false }
 tear-sdk = { path = "./tear-sdk" }
+near-contract-standards = "5.23"
 
 [dev-dependencies]
-near-sdk = { version = "5.16", features = ["unit-testing"] }
-near-workspaces = { version = "0.21", features = ["unstable"] }
+near-sdk = { version = "5.23", features = ["unit-testing"] }
+near-workspaces = { version = "0.22", features = ["unstable"] }
 tokio = { version = "1.12.0", features = ["full"] }
 serde_json = "1"
 
