--- a/intear-dex-types/Cargo.toml
+++ b/intear-dex-types/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tear-sdk"
+name = "intear-dex-types"
 version = "0.1.0"
 edition = "2024"
 
@@ -8,3 +8,4 @@ near-sdk = { version = "5", default-features = false }
 
 [features]
 abi = []
+json = []
