--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,9 @@ container_build_command = [
 ]
 
 [dependencies]
-near-sdk = { version = "5.23", default-features = false, features = ["unstable"] }
+near-sdk = { version = "5.23", default-features = false, features = [
+    "unstable",
+] }
 wasmi = { version = "1.0.4", default-features = false }
 intear-dex-types = { path = "./intear-dex-types", features = ["json"] }
 near-contract-standards = "5.23"
@@ -33,12 +35,11 @@ near-contract-standards = "5.23"
 near-sdk = { version = "5.23", features = ["unit-testing"] }
 near-workspaces = { version = "0.22", features = ["unstable"] }
 tokio = { version = "1.12.0", features = ["full"] }
-serde_json = "1"
 
 [profile.release]
 codegen-units = 1
-opt-level = 3
+opt-level = 2 # TODO: Improve size and speed optimization once near moves to wasmtime
 lto = true
 debug = false
 panic = "abort"
-overflow-checks = true
+overflow-checks = false # deny(clippy::arithmetic_side_effects) makes this unnecessary, unless bug is in a dependency
