--- a/example-dex/Cargo.toml
+++ b/example-dex/Cargo.toml
@@ -10,7 +10,4 @@ crate-type = ["cdylib"]
 near-sdk = { version = "5", default-features = false }
 uint = "0.10"
 intear-dex-types = { path = "../intear-dex-types", features = ["json"] }
-
-[profile.release]
-codegen-units = 1
-opt-level = "s"
+talc = { version = "4.4.3", default-features = false, features = ["lock_api"] }
