--- a/smallest-possible-dex/Cargo.toml
+++ b/smallest-possible-dex/Cargo.toml
@@ -7,15 +7,6 @@ edition = "2024"
 crate-type = ["cdylib"]
 
 [dependencies]
-talc = "4.4.3"
-spin = "0.10.0"
+talc = { version = "4.4.3", default-features = false, features = ["lock_api"] }
 borsh = "1.6.0"
 intear-dex-types = { path = "../intear-dex-types" }
-
-[profile.release]
-codegen-units = 1
-opt-level = "s"
-panic = "abort"
-
-[profile.dev]
-panic = "abort"
