--- a/intear-dex-types/Cargo.toml
+++ b/intear-dex-types/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2024"
 near-sdk = { version = "5", default-features = false }
 
 [features]
-abi = []
+abi = ["json", "near-sdk/abi"]
 json = []
