--- a/dexes/simple-amm/Cargo.toml
+++ b/dexes/simple-amm/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "example-dex"
+name = "simple-amm-dex"
 version = "0.1.0"
 edition = "2024"
 
@@ -9,5 +9,5 @@ crate-type = ["cdylib"]
 [dependencies]
 near-sdk = { version = "5", default-features = false }
 uint = "0.10"
-intear-dex-types = { path = "../intear-dex-types", features = ["json"] }
+intear-dex-types = { path = "../../intear-dex-types", features = ["json"] }
 talc = { version = "4.4.3", default-features = false, features = ["lock_api"] }
