--- a/intear-dex-types/Cargo.toml
+++ b/intear-dex-types/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2024"
 near-sdk = { version = "5", default-features = false }
 
 [features]
+default = ["std"]
 abi = ["json", "near-sdk/abi"]
-json = []
+json = ["std"]
+std = []
