--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ near-contract-standards = "5.23"
 near-sdk = { version = "5.23", features = ["unit-testing"] }
 near-workspaces = { version = "0.22", features = ["unstable"] }
 tokio = { version = "1.12.0", features = ["full"] }
+near-crypto = "0.34.2"
 
 [profile.release]
 codegen-units = 1
