--- a/dexes/otc/Cargo.toml
+++ b/dexes/otc/Cargo.toml
@@ -10,4 +10,4 @@ crate-type = ["cdylib"]
 near-sdk = { version = "5", default-features = false, features = ["unstable"] }
 intear-dex-types = { path = "../../intear-dex-types", features = ["json"] }
 talc = { version = "4.4.3", default-features = false, features = ["lock_api"] }
-near-crypto = { version = "0.34.2", default-features = false }
+crypto-bigint = { version = "0.6.1", default-features = false }
