--- a/dexes/simple-amm/Cargo.toml
+++ b/dexes/simple-amm/Cargo.toml
@@ -8,6 +8,6 @@ crate-type = ["cdylib"]
 
 [dependencies]
 near-sdk = { version = "5", default-features = false }
-uint = "0.10"
 intear-dex-types = { path = "../../intear-dex-types", features = ["json"] }
 talc = { version = "4.4.3", default-features = false, features = ["lock_api"] }
+crypto-bigint = { version = "0.6.1", default-features = false }
