final preparations before release

--- a/dexes/minimal/Cargo.toml
+++ b/dexes/minimal/Cargo.toml
@@ -9,4 +9,4 @@ crate-type = ["cdylib"]
 [dependencies]
 talc = { version = "4.4.3", default-features = false, features = ["lock_api"] }
 borsh = { version = "1.6.0", default-features = false }
-intear-dex-types = { path = "../../intear-dex-types", default-features = false }
+intear-dex-types = { path = "../../intear-dex-types" }
