--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["intear-dex-types", "dexes/simple-amm", "dexes/minimal", "dexes/otc"]
+members = ["intear-dex-types", "dexes/simple-amm", "dexes/minimal", "dexes/otc", "manage"]
 
 [package]
 name = "intear-dex"
