--- a/dexes/otc/Cargo.toml
+++ b/dexes/otc/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 crate-type = ["cdylib"]
 
 [dependencies]
-near-sdk = { version = "5", default-features = false, features = ["unstable"] }
+near-sdk = { version = "5", features = ["unstable"] }
 intear-dex-types = { path = "../../intear-dex-types", features = ["json"] }
 talc = { version = "4.4.3", default-features = false, features = ["lock_api"] }
 crypto-bigint = { version = "0.6.1", default-features = false }
